--- a/requirements/Pipfile
+++ b/requirements/Pipfile
@@ -10,6 +10,7 @@ verify_ssl = true
 [packages]
 romkan = "*"
 xerox = "*"
+japanese-numbers-python = {editable = true,git = "git://github.com/SteveClement/japanese-numbers-python.git"}
 
 [requires]
 python_version = "3.8"
